<resources>
    <string name="app_name">Service Reminder</string>
    <string name="add">Add</string>
    <string name="show_list">Show List</string>
    <string name="name">Name</string>
    <string name="number">Phone Number</string>
    <string name="show_list2">active list</string>
    <string name="add2">add</string>
    <string name="contact">contact</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="plate_number">Plate Number</string>
    <string name="kilometer">Kilometer</string>
    <string name="contact_name">Contact Name</string>
    <string name="date_description">Text Description</string>
    <string name="phone_description">Text Description</string>
    <string name="text_description">Text Description</string>
    <string name="waiting_list">waiting list</string>
    <string name="no_waiting_customers_to_display">NO WAITING CUSTOMERS TO DISPLAY</string>
    <string name="alert_dialog_two_buttons_title" />
</resources>
