<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gamecodeschool.garagepractice.MainActivity">

    <EditText
        android:id="@+id/contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contactNumber"
        android:layout_alignStart="@+id/contactNumber"
        android:ems="10"
        android:hint="@string/name"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/contactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/kilometer"
        android:layout_alignStart="@+id/kilometer"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:maxLength="10"
        android:textAlignment="center" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listButton"
        android:layout_alignEnd="@+id/contactNumber"
        android:layout_marginBottom="27dp"
        android:onClick="handleContact"
        android:text="@string/contact"/>

    <Button
        android:text="@string/add2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/contactButton"
        android:layout_toStartOf="@+id/contactButton"
        android:layout_marginEnd="49dp"
        android:id="@+id/addContact"
        android:onClick="handleAdd" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="52dp"
        android:onClick="handleShowList"
        android:text="@string/show_list2" />

    <EditText
        android:id="@+id/kilometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/plateNumber"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/kilometer"
        android:inputType="number"
        android:maxLength="6"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/plateNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kilometer"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/plate_number"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contactName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="54dp"
        android:text="@string/customer_profile"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/waitingListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignTop="@+id/listButton"
        android:onClick="handleWaitingList"
        android:text="@string/waiting_list" />

</RelativeLayout>
